--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.core:core-ktx:1.1.0"
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "org.postgresql:postgresql:42.2.9.jre7"
 }
